fix bug, fix search icon from jumping

--- a/web/themes/custom/votegov/src/sass/uswds-overrides/usa-search.scss
+++ b/web/themes/custom/votegov/src/sass/uswds-overrides/usa-search.scss
@@ -13,7 +13,7 @@
   form {
     &:focus-within {
       .usa-input {
-        background-position: 5% 45%;
+        background-position: 3% 45%;
         background-color: $bg-light-cool;
         border-color: $base-primary;
         -webkit-transition: width .3s ease-in-out;
